--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             </ul>
         </nav>
         <div id="toggle"></div>
+        <div class="theme">
+            <i class="fa fa-moon-o" aria-hidden="true"></i>
+        </div>
     </header>
 
     <div class="arrow">
-        <a href="#foot"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-
+        <a href="#foot" class="fa fa-angle-double-down"></a>
     </div>
 
     <section id="home">Home</section>
@@ -37,6 +39,7 @@
     <section id="contact">Contact</section>
 
     <footer id="foot">Footer</footer>
+
     <script src="script.js"></script>
 </body>
 
