--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>logo</h1>
         <nav>
             <ul id="navbar">
-                <li><a style="--i:1;" class="home" href="#home">Home</a></li>
+                <li><a style="--i:1;" href="#home">Home</a></li>
                 <li><a style="--i:2;" href="#about">About</a></li>
                 <li><a style="--i:3;" href="#portfolio">Portfolio</a></li>
                 <li><a style="--i:4;" href="#blogs">Blogs</a></li>
