--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <h1>logo</h1>
-        <nav>
+        <nav id="navBar">
             <ul>
                 <li><a class="active" href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -32,6 +32,7 @@
                 </div>
             </div>
         </div>
+        <div id="toggle"></div>
     </header>
 
     <div class="icon">
