--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>myFirstResponsiveWebsite</title>
 </head>
 
 <body>
@@ -26,9 +26,9 @@
         <div>
             <div class="options">
                 <i class="fa fa-moon-o moon"></i>
-                <button>Sign-up</button>
+                <button class="btn">Sign-up</button>
                 <div>
-                    <i class="fa fa-sign-in" aria-hidden="true"></i>
+                    <i class="fa fa-sign-in sign" aria-hidden="true"></i>
                 </div>
             </div>
         </div>
